--- a/index.html
+++ b/index.html
@@ -633,6 +633,59 @@ function exportCertificate(){
       <h3>Input Data:</h3>
       <pre class="mono">${input.value.replace(/</g,"&lt;")}</pre>
 
+<div class="footer">
+
+<div class="card">
+  <h3>How NOVAK Differs from Blockchain, Bitcoin & SSL/TLS</h3>
+
+  <p style="margin-top:10px;font-size:14px;">
+    NOVAK is a <strong>proof-before-action enforcement layer</strong> — it requires machines to
+    mathematically justify an action <em>before executing it</em>. It is not a currency,
+    distributed ledger, or network security protocol.
+  </p>
+
+  <h4 style="margin-top:14px;">NOVAK vs Blockchain</h4>
+  <ul style="margin-left:18px;font-size:14px;line-height:1.45;">
+    <li><strong>Blockchain:</strong> Stores transactions on a distributed ledger after they occur.</li>
+    <li><strong>NOVAK:</strong> Computes legality proof <em>before</em> an action happens.</li>
+    <li><strong>Blockchain:</strong> Requires decentralized consensus.</li>
+    <li><strong>NOVAK:</strong> Works on any system — no miners, no chain, no tokens.</li>
+    <li><strong>Blockchain:</strong> Immutable recordkeeping.</li>
+    <li><strong>NOVAK:</strong> Execution gating + accountability.</li>
+  </ul>
+
+  <h4 style="margin-top:14px;">NOVAK vs Bitcoin / Cryptocurrency</h4>
+  <ul style="margin-left:18px;font-size:14px;line-height:1.45;">
+    <li><strong>Cryptocurrency:</strong> Financial asset secured by a blockchain.</li>
+    <li><strong>NOVAK:</strong> Not a currency — governs automation & decision systems.</li>
+    <li><strong>Bitcoin:</strong> Incentive-driven mining + token economics.</li>
+    <li><strong>NOVAK:</strong> No mining, no economic layer, no trading.</li>
+  </ul>
+
+  <h4 style="margin-top:14px;">NOVAK vs SSL/TLS (HTTPS)</h4>
+  <ul style="margin-left:18px;font-size:14px;line-height:1.45;">
+    <li><strong>SSL/TLS:</strong> Encrypts data in transit between devices.</li>
+    <li><strong>NOVAK:</strong> Ensures the action itself is lawful and verified.</li>
+    <li><strong>SSL/TLS:</strong> Protects communication channels.</li>
+    <li><strong>NOVAK:</strong> Protects automated decisions, workflows & outcomes.</li>
+  </ul>
+
+  <h4 style="margin-top:14px;">What NOVAK Actually Is</h4>
+  <ul style="margin-left:18px;font-size:14px;line-height:1.45;">
+    <li>A cryptographic execution checkpoint.</li>
+    <li>A tamper-evident proof-of-legality engine.</li>
+    <li>A universal pre-action verification layer.</li>
+    <li>Compatible with any industry, network, or system.</li>
+    <li>Lightweight — no ledger, consensus, or infrastructure overhead.</li>
+  </ul>
+
+  <p style="margin-top:14px;font-size:14px;">
+    NOVAK can <strong>use blockchain, PKI or secure transport if desired</strong> — but it does
+    not require them. Its power comes from enforcing accountability at the moment of execution.
+  </p>
+</div>
+
+
       <footer>
         NOVAK Protocol — Patent Pending © 2025<br>
         Demonstration only — no data retained or transmitted.
